syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy.caio";
option java_outer_classname = "FretesServiceOuterClass";

package br.com.zup.academy.caio;

service FretesService {

  rpc calculaFrete(CalculaFreteRequest) returns (CalculaFreteResponse) {}
}

//calculaFrete
message CalculaFreteRequest{
  string cep = 1;
}

message CalculaFreteResponse {
  double valor = 1;
  string cep = 2;
  string logradouro = 3;
  string cidade = 4;
  string estado = 5;
}

message ErroDetails{
  int32  code = 1;
  string mensagem = 2;
}

